@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-29T16:06:51Z",
+  "timestamp" : "2023-10-30T00:31:13Z",
   "count_outdated" : 455,
   "uniques_outdated" : 286,
-  "count" : 459,
-  "uniques" : 290,
+  "count" : 461,
+  "uniques" : 292,
   "clones" : [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -16,12 +16,12 @@
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count": 5,
+      "count_minmax": [ 3, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 5,
+      "uniques_minmax": [ 3, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
