@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 6,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -9,8 +9,8 @@
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 5,
+      "uniques": 5
     }
   ]
 }
